[package]
name = "reverb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
clap_derive = "4.5.13"
clap = { version = "4.5.13", features = ["derive"] }
russh = "0.44.0"
russh-keys = "0.44.0"
tokio = {  version = "1.39.2", features = ["full"]}
dirs = "5.0.1"
log = "0.4.22"
env_logger = "0.11.5"